--- a/SuperVisedVSUnSuperVised/mnist.ipynb
+++ b/SuperVisedVSUnSuperVised/mnist.ipynb
@@ -14,7 +14,7 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python_defaultSpec_1599172374909",
+   "name": "python_defaultSpec_1599173101842",
    "display_name": "Python 3.8.5 64-bit ('ml': conda)"
   }
  },
@@ -27,7 +27,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd "
+    "import pandas as pd\n",
+    "import seaborn as sns\n"
    ]
   }
  ]
